Changelog
=========

4.2.0 (unreleased)
------------------

- Removed references to presentations. Refs #15699
  [reinhardt]


4.1.2 (2017-06-12)
------------------

- Removed tab "Zitierhinweise". Refs #15418
  [reinhardt]


4.1.1 (2017-01-27)
------------------

- Restored lost changes.
  [reinhardt]
- margin-top for twitter button, refs #13628
  [reinhardt]


4.1.0 (2017-01-27)
------------------

- Töchter, refs #13564, #13565, #13566, #13568, #13569, #13659, #13718
  [reinhardt]


4.0.2 (2016-07-08)
------------------

- Nothing changed yet.


4.0.1 (2016-05-23)
------------------

- Another syndication fix for Plone 4.3, refs #11785 #13624 [reinhardt]


4.0.0 (2016-04-25)
------------------

- New post-it images, refs #13370
- Removed styles for facebook like buttons, refs #13370
- Fixes for Plone 4.3, refs #11785
- removed dfg reference from footer, refs #11972
- styles for string fallback widget (doi), refs #12126
- added test_homepage


3.4.4 (2015-09-01)
------------------

- use separate lookup for ddcPlace (the bsb opac values differ from the
  internal ones), refs #10622 [reinhardt]


3.4.3 (2015-04-21)
------------------

- fixed macro call so that it doesn't instatiiate the view every time, refs
  #5752 [reinhardt]


3.4.2 (2015-04-09)
------------------

- adjusted styles for browsing menu, refs #5752


3.4.1 (2015-04-07)
------------------

- also use structure for authors/editors in search results, refs #10782
  [reinhardt]


3.4.0 (2015-04-07)
------------------

- added third level to browsing view, refs #5752 [reinhardt]
- Refs #11023 sort publications on home page and in RSS feeds [deroiste]
- updated search form, refs #10565 [reinhardt]


3.3 (2014-10-07)
----------------

- changed search form: changed language fields to checkboxes and moved them
  down, show regions as a tree, replaced Subject select box with autosuggest
  textarea, refs #8196 [reinhardt]


3.2 (2014-08-05)
----------------
