@@ -1,0 +1,18 @@
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"
+      xmlns:tal="http://xml.zope.org/namespaces/tal"
+      xmlns:metal="http://xml.zope.org/namespaces/metal"
+      xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+      lang="en"
+      metal:use-macro="context/main_template/macros/master"
+      i18n:domain="recensio">
+
+  <body>
+    <metal:main fill-slot="main">
+        <h1 id="parent-fieldname-title" class="documentFirstHeading"
+            tal:content="context/Title">
+            Datenschutz
+        </h1>
+        <p tal:replace="structure view/getText"></p>
+    </metal:main>
+  </body>
+</html>
