@@ -1,0 +1,3 @@
+<iframe frameborder="no" height="200" width="600"
+    src="https://piwik2.wirkbetrieb.de/index.php?module=CoreAdminHome&amp;action=optOut&amp;language=de">
+</iframe>
